@@ -8,7 +8,7 @@
 <LINK REL=stylesheet HREF="styles.css" TYPE="text/css">
 <CENTER>
 <A HREF="index.html"><IMG SRC="iTerm.png" TITLE="" ALT="iTerm" BORDER="0"></A>
-<H1><A HREF="index.html">iTerm Project Homepage</A></H1>
+<H1>iTerm Project Homepage</H1>
 
 <TABLE BGCOLOR="#000000" CELLPADDING="10" CELLSPACING="1" BORDER="0" WIDTH="100%">
 <TR>
@@ -50,6 +50,7 @@
 
 <FONT SIZE="5"><STRONG>Tips:</STRONG></FONT><BR>
 <UL>
+<LI>Text alignment in iTerm depends on the font you selected. Currently, to have good alignment, you have a limited choice of fonts, especially when you need to use graphical characters. Bold is also only supported when the chosen font has a bold trait available that does not change the font height.</LI>
 <LI>Starting from version 0.5.5, iTerm uses a different approach to support all encodings. Thus the old encoding settings are lost and they have to be manually reset. </LI>
 <LI>If you are originally running CTerminal and wish to keep your old address book, you need to rename your "CTerminal Address Book"
 file as "iTerm Address Book".</LI>
